[package]
name = "lele"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { version = "0.34.0", features = ["discovery-local-network", "discovery-pkarr-dht"] } 
iroh-gossip = "0.34.0"
tracing-subscriber = "0.3"
rand = { version = "0.8.5", features = ["std_rng"] }
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
data-encoding = "2"
bytes = { version = "1", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
futures-lite = "2"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
n0-future = "0.1.2"
futures = "0.3.31"
